--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
-<h4>分类目录</h4>
+<h3><span class="glyphicon glyphicon-tags"> </span>CATEGORIES</h3>
 <ul class="nav nav-pills nav-stacked">
     <!--<li class="active">-->
     <li>
-        <a href="#">
+        <a href="/category.html">
             <span class="badge pull-right">{{ site.categories.linux|size }}</span>
             linux
         </a>
@@ -20,7 +20,7 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="/category.html">
             <span class="badge pull-right">{{ site.categories.ansible|size }}</span>
             ansible
         </a>
@@ -40,30 +40,4 @@
 </ul>
 
 
-<h4>RECENT POSTS</h4>
-<ul class="list-group">
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.linux|size }}</span>
-        linux
-    </li>
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.shell|size }}</span>
-        shell
-    </li>
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.python|size }}</span>
-        python
-    </li>
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.ansible|size }}</span>
-        ansible
-    </li>
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.zabbix|size }}</span>
-        zabbix
-    </li>
-    <li class="list-group-item">
-        <span class="badge">{{ site.categories.salt|size }}</span>
-        salt
-    </li>
-</ul>
+<h4><span class="glyphicon glyphicon-paperclip"></span> RECENT POSTS</h4>
