--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1>sapser's blog</h1>
+        <p>博客还在建设中...</p>
       </div>
     </div>
 
