--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,43 +1,49 @@
-<h3><span class="glyphicon glyphicon-tags"> </span>CATEGORIES</h3>
+<br />
+<h4><span class="glyphicon glyphicon-tags"> </span> CATEGORIES</h4>
 <ul class="nav nav-pills nav-stacked">
     <!--<li class="active">-->
     <li>
-        <a href="/category.html">
+        <a href="/category/linux">
             <span class="badge pull-right">{{ site.categories.linux|size }}</span>
             linux
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="/category/shell">
             <span class="badge pull-right">{{ site.categories.shell|size }}</span>
             shell
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="/category/python">
             <span class="badge pull-right">{{ site.categories.python|size }}</span>
             python
         </a>
     </li>
     <li>
-        <a href="/category.html">
+        <a href="/category/ansible">
             <span class="badge pull-right">{{ site.categories.ansible|size }}</span>
             ansible
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="/category/zabbix">
             <span class="badge pull-right">{{ site.categories.zabbix|size }}</span>
             zabbix
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <span class="badge pull-right">{{ site.categories.salt|size }}</span>
-            salt
         </a>
     </li>
 </ul>
 
 
+<br />
 <h4><span class="glyphicon glyphicon-paperclip"></span> RECENT POSTS</h4>
+<ul>
+{% for post in site.posts %}
+  {% if forloop.length < 3 %}
+    <li>
+      <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
+    </li>
+  {% endif %}
+{% endfor %}
+</ul>
+
