--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,19 +15,15 @@
     <div class="jumbotron">
       <div class="container">
         <h1>sapser's blog</h1>
-        <p>博客还在建设中...</p>
+        <p>博客建设中...</p>
       </div>
     </div>
 
     <div class="container">
-
-
-        <ul class="nav nav-pills">
-              <li><a href="/index.html">Home</a></li>
-                <li><a href="/zabbix/2014/07/04/zabbix邮件报警设置/">Profile</a></li>
-                  <li><a href="#">Messages</a></li>
-              </ul>
-
+      <ul class="nav nav-tabs" role="tablist">
+        <li><a href="/">Home</a></li>
+        <li class="disabled"><a href="/">About</a></li>
+      </ul>
 
       <div class="row">
         <div class="col-md-3">
