--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>sapser's blog</h1>
-        <p>博客建设中...</p>
+        <p>站在巨人的肩上</p>
       </div>
     </div>
 
