--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <!-- pygments代码高亮-->
+    <link rel="stylesheet" href="/static/css/pygments.css">
   </head>
 
   <body>
