侧边栏增加最新评论

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -44,3 +44,14 @@
     {% endif %}
 {% endfor %}
 
+<br />
+<section>
+    <h4>LATESTt COMMENTS</h4>
+    <ul class="ds-recent-comments" data-num-items="10" data-show-avatars="0" data-show-time="0" data-show-title="0" data-show-admin="0" data-excerpt-length="18"></ul>
+</section>
+
+<section style="width:250px;">
+    <h4>RECENTLY VISITORS</h4>
+    <ul class="ds-recent-visitors" data-num-items="4" data-avatar-size="45" style="margin-top:10px;"></ul>
+</section>
+
