--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
 <!-- 多说评论框 start -->
 <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="{{ page.url | prepend: site.baseurl }}"></div>
 <!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<!-- 多说公共JS代码 start -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"sapser"};
         (function() {
@@ -38,5 +38,5 @@ var duoshuoQuery = {short_name:"sapser"};
                 (document.getElementsByTagName('head')[0] 
                  || document.getElementsByTagName('body')[0]).appendChild(ds);
         })();
-        </script>
+</script>
 <!-- 多说公共JS代码 end -->
