--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,7 +46,7 @@
 
 
 <br />
-<section style="width:250px;">
-    <h4><span class="glyphicon glyphicon-user">RECENT VISITORS</h4>
-    <ul class="ds-recent-visitors" data-num-items="4" data-avatar-size="45" style="margin-top:10px;"></ul>
-</section>
+<!--<section style="width:250px;">-->
+<h4><span class="glyphicon glyphicon-user"> RECENT VISITORS</h4>
+<ul class="ds-recent-visitors" data-num-items="4" data-avatar-size="45" style="margin-top:10px;"></ul>
+<!--</section>-->
