--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,7 +46,10 @@
 
 
 <br />
-<!--<section style="width:250px;">-->
-<h4><span class="glyphicon glyphicon-user"> RECENT VISITORS</h4>
-<ul class="ds-recent-visitors" data-num-items="4" data-avatar-size="45" style="margin-top:10px;"></ul>
-<!--</section>-->
+<h4><span class="glyphicon glyphicon-comment"></span> RECENT COMMENTS</h4>
+<ul class="ds-recent-comments" data-num-items="10" data-show-avatars="1" data-show-time="0" data-show-title="1" data-show-admin="1" data-excerpt-length="18"></ul>
+
+
+<br />
+<h4><span class="glyphicon glyphicon-user"></span> RECENT VISITORS</h4>
+<ul class="ds-recent-visitors" data-num-items="12" data-avatar-size="45" style="margin-top:10px;"></ul>
