--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,19 +24,6 @@ layout: default
 <br />
 <br />
 
-<!-- 多说评论框 start -->
+<!-- 多说评论框，只在博文下显示评论框，所以放在这里 -->
 <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="{{ page.url | prepend: site.baseurl }}"></div>
 <!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"sapser"};
-        (function() {
-                var ds = document.createElement('script');
-                ds.type = 'text/javascript';ds.async = true;
-                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-                ds.charset = 'UTF-8';
-                (document.getElementsByTagName('head')[0] 
-                 || document.getElementsByTagName('body')[0]).appendChild(ds);
-        })();
-</script>
-<!-- 多说公共JS代码 end -->
