增加文章：nginx集成ldap

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,9 +3,9 @@
 <ul class="nav nav-pills nav-stacked">
     <!--<li class="active">-->
     <li>
-        <a href="/category/linux">
-            <span class="badge pull-right">{{ site.categories.linux|size }}</span>
-            linux
+        <a href="/category/devops">
+            <span class="badge pull-right">{{ site.categories.devops|size }}</span>
+            devops
         </a>
     </li>
     <li>
@@ -30,6 +30,12 @@
         <a href="/category/zabbix">
             <span class="badge pull-right">{{ site.categories.zabbix|size }}</span>
             zabbix
+        </a>
+    </li>
+    <li>
+        <a href="/category/bigdata">
+            <span class="badge pull-right">{{ site.categories.bigdata|size }}</span>
+            大数据相关
         </a>
     </li>
 </ul>
