新文章：distcp使用filters参数排除文件

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@
     <li>
         <a href="/category/bigdata">
             <span class="badge pull-right">{{ site.categories.bigdata|size }}</span>
-            大数据相关
+            大数据
         </a>
     </li>
 </ul>
